<resources>
    <!-- default -->
    <string name="title_activity_profile_page">FullscreenActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- custom -->
    <string name="appName">ToDays</string>
    <string name="text_ToDays">ToDays</string>
    <string name="text_Events">Events</string>
    <string name="text_BeenUsed">Been Used</string>
    <string name="text_Shares">Shares</string>
    <string name="text_eventsUnit">Events</string>
    <string name="text_daysUnit">Days</string>
    <string name="text_timesUnit">Times</string>
    <string name="text_CreateEvent">Create Event</string>
    <string name="text_Repeat">Repeat</string>
    <string name="text_Remind">Remind</string>
    <string name="text_Theme">Theme</string>
    <string name="text_targetDate">Target Date</string>
    <string name="editText_eventName" />
    <string name="hint_EventName">Event Name</string>
    <string name="button_chooseDate" />
    <string name="button_Save">Save</string>
    <string name="button_repeat" />
    <string name="button_remind" />
    <string name="num_event">0</string>
    <string name="num_beenUsed">0</string>
    <string name="num_share">0</string>
    <string name="vec_calendar" />
    <string name="vec_repeat" />
    <string name="vec_remind" />
    <string name="vec_theme" />
    <string name="vec_back" />
    <string name="vec_flag" />
    <string name="button_DeleteEvent">Delete Event</string>
    <string name="text_EditEvent">Edit Event</string>
    <string name="button_Login">Login</string>
    <string name="editText_username" />
    <string name="text_Username">Username</string>
    <string name="hint_username" />
    <string name="text_Password">Password</string>
    <string name="text_Register">Don\'t have an account?</string>
    <string name="button_Regsiter">Register</string>
    <string name="text_event_name" />
    <string name="text_event_date" />
    <string name="num_day" />
    <string name="text_DAYS_to_event" />
    <string name="dateHint">2000–1–1</string>
    <string name="hint_password" />
    <string name="editText_password" />
    <string name="text_Confirm_Password">Confirm Password</string>
    <string name="text_Today">Today</string>
    <string name="text_in_history">in History</string>
    <string name="text_tih_matters" />
    <string name="text_tih_premise">1000</string>
    <string name="text_tih_matter">Something happened.</string>
    <string name="vec_share" />
    <string name="text_event_date_w" />
    <string name="colon">:</string>
    <string name="text_targetDate_wday" />
    <string name="vec_edit" />
    <string name="vec_delete" />
    <string name="button_Homepage">Homepage</string>
    <string name="button_User_Profile">User Profile</string>
    <string name="button_TIH">Today in History</string>
</resources>