<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_event_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202020"
    tools:context=".Fragment.AddEventFragment">

    <TextView
        android:id="@+id/textViewCreateEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_CreateEvent"
        android:textColor="@color/light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/text_Repeat"
        android:textColor="@color/light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewRepeat"
        app:layout_constraintStart_toEndOf="@+id/imageViewRepeat"
        app:layout_constraintTop_toTopOf="@+id/imageViewRepeat" />

    <TextView
        android:id="@+id/textViewRemind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/text_Remind"
        android:textColor="@color/light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewRemind"
        app:layout_constraintStart_toEndOf="@+id/imageViewRemind"
        app:layout_constraintTop_toTopOf="@+id/imageViewRemind" />

    <TextView
        android:id="@+id/textViewTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/text_Theme"
        android:textColor="@color/light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewTheme"
        app:layout_constraintStart_toEndOf="@+id/imageViewTheme"
        app:layout_constraintTop_toTopOf="@+id/imageViewTheme"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:adjustViewBounds="false"
        android:background="@color/clear"
        android:contentDescription="@string/vec_back"
        android:tint="@color/clear"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCreateEvent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewCreateEvent" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="69dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_round_corner"
        android:contentDescription="@string/button_Save"
        android:text="@string/button_Save"
        android:textColor="@color/dark"
        android:textColorLink="@color/dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCreateEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewCreateEvent"
        tools:text="Save" />

    <ImageView
        android:id="@+id/imageViewFlag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/vec_flag"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        app:srcCompat="@drawable/ic_baseline_flag_24" />

    <ImageView
        android:id="@+id/imageViewCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/vec_calendar"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline14"
        app:srcCompat="@drawable/ic_baseline_date_range_24" />

    <ImageView
        android:id="@+id/imageViewRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/vec_repeat"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
        app:srcCompat="@drawable/ic_baseline_repeat_24" />

    <ImageView
        android:id="@+id/imageViewRemind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/vec_remind"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline17"
        app:srcCompat="@drawable/ic_baseline_notifications_24" />

    <ImageView
        android:id="@+id/imageViewTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/vec_theme"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline18"
        app:srcCompat="@drawable/ic_baseline_filter_24" />

    <EditText
        android:id="@+id/editTextEventName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:autofillHints=""
        android:background="@null"
        android:drawableBottom="@drawable/line"
        android:ems="10"
        android:hint="@string/hint_EventName"
        android:inputType="text"
        android:text="@string/editText_eventName"
        android:textColor="@color/light"
        android:textColorHint="@color/light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewFlag"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintStart_toEndOf="@+id/imageViewFlag"
        app:layout_constraintTop_toTopOf="@+id/imageViewFlag" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/textViewTargetDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/text_targetDate"
        android:textColor="@color/light"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintStart_toEndOf="@+id/imageViewCalendar"
        app:layout_constraintTop_toTopOf="@+id/guideline14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="70dp"
        android:layout_height="37dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/clear"
        android:contentDescription="@string/button_repeat"
        app:layout_constraintBottom_toBottomOf="@+id/textViewRepeat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewRepeat"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="70dp"
        android:layout_height="37dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/clear"
        android:contentDescription="@string/button_remind"
        app:layout_constraintBottom_toBottomOf="@+id/textViewRemind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewRemind"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />

    <Button
        android:id="@+id/buttonSave2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/green"
        android:contentDescription="@string/button_Save"
        android:text="@string/button_Save"
        android:textAllCaps="false"
        android:textColor="@color/light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="@+id/guideline12" />

    <Button
        android:id="@+id/buttonDeleteEvent"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/red"
        android:contentDescription="@string/button_DeleteEvent"
        android:text="@string/button_DeleteEvent"
        android:textAllCaps="false"
        android:textColor="@color/light"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@+id/guideline20" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableBottom="@drawable/line"
        android:ems="10"
        android:hint="@string/dateHint"
        android:inputType="date"
        android:text="@string/dateHint"
        android:textColor="@color/light"
        android:textColorHint="@color/light"
        android:textColorLink="@color/clear"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewCalendar"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@+id/textViewTargetDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewTargetDate"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:id="@+id/textViewRepeat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Once"
        android:textColor="@color/dark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton" />

    <TextView
        android:id="@+id/textViewRemind2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No reminder"
        android:textColor="@color/dark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="@+id/imageButton2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView3"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTheme"
        app:layout_constraintVertical_bias="0.259" />

</androidx.constraintlayout.widget.ConstraintLayout>